# CI_CD_Test

./: main.py  pyproject.toml
.github/workflows/: python-app.yml
tests/mean/: test_mean.py
